2008-09-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9312: felogin: uninitialized vars (Thanks to Steffen Kamper)
	* Fixed bug #9282: Allow subkeys for TypoScript "config." array

2008-09-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #8996: htmlArea RTE: link to file not updated when changing case in file name
	* Fixed bug #9022: Link-Icon stays grey while trying to link an image in ie7
	* Fixed bug #3546: htmlArea RTE: wrong charset used by mb_regex in spell checker

2008-09-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #9296: htmlArea RTE: remove upload form when element browser is in readOnly mode

2008-09-07  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9301: Missing colorization in Localization Overview of the page tree, credits Steffen Kamper

2008-09-07  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8677: FE login redirect after logout does not work (thanx to Steffen Kamper)

2008-09-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9296: htmlArea RTE: remove upload form when element browser is in readOnly mode

2008-09-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9227: Group field in Flexforms with a single table does not show selected items

2008-09-03  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #8532: enhance TYPO3 manual (inline)

2008-09-02  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #8508: String "Important Notice" in About Modules is hardcoded

2008-09-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9261: Indentation set with div section in htmlArea RTE is not rendered correctly in FE

2008-09-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9249: Misspelling in Install tool (thanks to Christian Kuhn)
	* Fixed bug #2642: Bug: Directories named 0 break directory listing and you cannnot create a directory with name 0 (thanks to Rob Vonk & Christian Kuhn)

2008-08-30  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9255: External URLs cannot be set in RTEhtmlarea anymore
