@@ -1,3 +1,7 @@
+2008-09-09  Dmitry Dulepov  <dmitry@typo3.org>
+
+    * Fixed bug #9268: TCA is not loaded in FE when config cache is disabled
+
 2008-09-08  Benjamin Mack  <benni@typo3.org>
 
 	* Fixed bug #9312: felogin: uninitialized vars (Thanks to Steffen Kamper)
